--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
             <div id="widget_0"></div>
             <script>
                 window.travelPayoutsWidgetInit({
-                    id: 'root',
+                    id: 'widget_0',
                     backColor: '#ff00ff',
                     textColor: '#00ff00',
                     buttonColor: '#ff0000'
