--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <script type="text/javascript" src="/tp_test_advanced/static/js/widget.js"></script>
+        <script type="text/javascript" src="tp_test_advanced/static/js/widget.js"></script>
         <title>App</title>
     </head>
     <body>
@@ -14,7 +14,7 @@
             <div id="widget_0"></div>
             <script>
                 window.travelPayoutsWidgetInit({
-                    id: 'widget_0',
+                    id: 'root',
                     backColor: '#ff00ff',
                     textColor: '#00ff00',
                     buttonColor: '#ff0000'
