--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <script type="text/javascript" src="/tp_test_advanced/static/js/main.js"></script>
+        <script type="text/javascript" src="/tp_test_advanced/static/js/widget.js"></script>
         <title>App</title>
     </head>
     <body>
@@ -14,7 +14,7 @@
             <div id="widget_0"></div>
             <script>
                 window.travelPayoutsWidgetInit({
-                    id: 'root',
+                    id: 'widget_0',
                     backColor: '#ff00ff',
                     textColor: '#00ff00',
                     buttonColor: '#ff0000'
@@ -38,7 +38,5 @@
                 <div class="message">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</div>
             </div>
         </div>
-
-        <script async type="text/javascript" src="%PUBLIC_URL%/static/js/client.js"></script>
     </body>
 </html>
